# Mangrove

./: .gitignore  .gitlab-ci.yml  LICENSE  Mangrove_Review_Standard.md  Mangrove_Review_Standard_v1.md  README.md  terms-of-use.md
Aggregator/: Manifest.toml  Project.toml
aggregator/: Manifest.toml  Project.toml  README.md  julia.sh  run.jl  tutorial.jl
aggregator/jupyter/: gen_inference.ipynb  turing_model.ipynb
aggregator/src/: Aggregator.jl  Data.jl  Inference.jl  Job.jl  MangroveBase.jl  Model.jl  dev.jl
blog/: _config.yml  package.json
blog/source/: tree.js
ccbor/: README.md  check_canonicality.ipynb
ccbor/js/: cbor.js
ccbor/rust/: Cargo.toml
client/: .env  .env.development  .env.production  README.md  nuxt.config.js  package-lock.json  package.json  utils.js
client/components/: Account.vue  ExtraForm.vue  FlagForm.vue  Front.vue  Identicon.vue  KeyList.vue  MetaForm.vue  PubKeyList.vue  Results.vue  Review.vue  ReviewForm.vue  ReviewList.vue  SchemeFilter.vue  SearchBox.vue  SubjectList.vue  SubjectProfile.vue  YourReviews.vue
client/layouts/: default.vue
client/middleware/: search.js
client/pages/: about.vue  build.vue  contribute.vue  faq.vue  index.vue  search.vue  settings.vue  using.vue
client/src/: App.vue  content-types.js  main.js  mutation-types.js  store.js  utils.js
client/store/: apis.js  index.js  mutation-types.js  scheme-types.js
clients/mangrove-js/: index.js  jest.setup.js  package.json  test.js
clients/mangrove-reviews-js/: README.md  index.js  package.json
data/: wrangling.ipynb
examples/: payloads-base.json  reviews-rs.json
examples/mangrove-rs/: Cargo.toml
file_hoster/: Cargo.toml
file_hoster/src/: index.html  lib.rs  main.rs
libraries/mangrove-reviews-js/: README.md  index.js  package.json
new-client/: nuxt.config.js  utils.js
new-client/components/: Account.vue  Front.vue  MetaForm.vue  Results.vue  ReviewList.vue  SchemeFilter.vue  SearchBox.vue  SubjectList.vue  SubjectProfile.vue  YourReviews.vue
new-client/content/: about.md  faq.md
new-client/layouts/: default.vue
new-client/middleware/: search.js
new-client/pages/: contribute.vue  faq.vue  index.vue  settings.vue  terms.vue  using.vue
new-client/store/: index.js  mutation-types.js
old-client/: .env.development  package.json
old-client/src/: App.vue  mutation-types.js
reviewer/: .env  Cargo.toml  Dockerfile  Rocket.toml  docker-compose.yml  out
reviewer/client/: package-lock.json  package.json
reviewer/client/src/: App.vue  main.js  mutation-types.js  store.js  utils.js
reviewer/client/src/components/: ExtraForm.vue  IdSelector.vue  LocationSelector.vue  MetaForm.vue  Profile.vue  ReviewBrowser.vue  ReviewForm.vue  SimpleMap.vue  UriBrowser.vue  UriSearch.vue  UrlSelector.vue
reviewer/client/src/components/id-selectors/: LeiSelector.vue  ReviewSelector.vue
reviewer/migrations/2019-04-01-202552_create_reviews/: up.sql
reviewer/src/: aggregator.rs  database.rs  error.rs  lib.rs  main.rs  review.rs  schema.rs
servers/file_hoster/: Cargo.toml  deploy.sh  template.yaml  test-deploy.sh
servers/file_hoster/src/: lib.rs
servers/reviewer/: Cargo.toml  README.md  deploy.sh  diesel.toml  docker-compose.yml  mangrove.jsonld  template.yaml
servers/reviewer/docs/: mangrove_openapi.yml  package.json
servers/reviewer/migrations/2019-04-01-202552_create_reviews/: down.sql  up.sql
servers/reviewer/migrations/2020-02-20-095225_add_geo/: down.sql  up.sql
servers/reviewer/src/: aggregator.rs  aggregator_schema.rs  database.rs  error.rs  fetch.rs  lib.rs  rdf.rs  review.rs  schema.rs
ui/: README.md  hdKeyDerivation.js  invalidate.sh  nuxt.config.js  package.json  utils.js
ui/assets/: global.css
ui/components/: Account.vue  AdvancedAccount.vue  ExtraForm.vue  FlagForm.vue  Gallery.vue  Identicon.vue  ImageForm.vue  InfoPage.vue  KeyList.vue  LogIn.vue  LogInDialog.vue  LogOut.vue  MdText.vue  MetaForm.vue  Review.spec.js  Review.vue  ReviewForm.vue  ReviewList.vue  ReviewListBase.vue  SaveKeyDialog.vue  SchemeFilter.vue  SearchBox.vue  SelectionMap.vue  SubjectList.vue  SubjectProfile.vue  SwitchAccount.vue  UserHeader.vue  YourReviews.vue
ui/content/: Mangrove_Original_Services_ToS.md  Mangrove_Original_Services_ToU.md  Mangrove_Review_Standard.md  about.md  submitted.md
ui/layouts/: default.vue  error.vue
ui/middleware/: account.js  clear.js  front.js  review-list.js  search.js
ui/pages/: account.vue  build.vue  contribute.vue  faq.vue  images.vue  index.vue  list.vue  search.vue  settings.vue  standard.vue  terms.vue  use-cases.vue
ui/store/: apis.js  data.js  index.js  indexeddb-types.js  links.js  metadata-types.js  mutation-types.js  scheme-types.js
widget/: .eslintrc.js  .gitignore  .neutrinorc.js  .prettierrc  README.md  package.json  template-widget-example.ejs
widget/src/: App.jsx  EmptyGif.jsx  ErrorBoundary.jsx  ErrorMessage.jsx  FlagForm.jsx  FormInput.jsx  FormRatingStars.jsx  GlobalState.jsx  IssuerIcon.jsx  IssuerName.jsx  Jdenticon.jsx  Layout.jsx  Loader.jsx  LocaleSwitch.jsx  MetadataTags.jsx  RatingStars.jsx  RawReviewData.jsx  Review.jsx  ReviewFilters.jsx  ReviewForm.jsx  ReviewFormImages.jsx  ReviewGallery.jsx  ReviewSignIn.jsx  StatusMessage.jsx  Subject.jsx  SubmitReviewPopUp.jsx  i18n.jsx  index.jsx  jest.setup.js  (+1 more)
(+94 files in other folders)
