[package]
name = "file_hoster"
version = "0.1.0"
authors = ["keorn <git@i.keorn.org>"]
edition = "2018"
default-run = "main"

[dependencies]
log = "0.4"
base64-url = "1.1"
once_cell = "1.3"
sha2 = "0.8"
rusoto_credential = "0.41"
rusoto_core = "0.41"
rusoto_s3 = "0.41"
rocket = "0.4"
rocket_contrib = { version = "0.4", default-features = false, features = ["json"] }
rocket_cors = "0.5"
rocket-multipart-form-data = "0.7"
rocket_lamb = "0.6"