[package]
name = "reviewer"
version = "0.1.0"
authors = ["keorn <git@i.keorn.org>"]
edition = "2018"
default-run = "main"

[dependencies]
once_cell = "1.3.1"
log = "0.4"
rand = "0.6"
url = "2.1"
isbn = "0.2"
diesel = { version = "1.0", features = ["postgres", "serde_json"] }
xmltree = "0.8"
reqwest = "0.9"
jsonwebtoken = { git = "https://github.com/plantingspace/jsonwebtoken.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.1"
schemars = "0.6"
okapi = "0.3"
dotenv = "0.9"
rocket = { version = "0.4", default-features = false }
rocket_cors = "0.5"
rocket_lamb = "0.6"
rocket_okapi = "0.3"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_postgres_pool", "diesel_sqlite_pool", "json"]