[package]
name = "reviewer"
version = "0.1.0"
authors = ["keorn <git@i.keorn.org>"]
edition = "2018"
default-run = "main"

[dependencies]
csv = "1.1"
diesel = { version = "1.0", features = ["postgres", "serde_json"] }
dotenv = "0.9"
isbn = "0.2"
jsonwebtoken = { git = "https://github.com/plantingspace/jsonwebtoken.git" }
log = "0.4"
okapi = "0.3"
once_cell = "1.3.1"
rand = "0.6"
reqwest = { version = "0.10", features = ["blocking"] }
rocket = { version = "0.4", default-features = false }
rocket_cors = "0.5"
rocket_lamb = "0.6"
rocket_okapi = "0.3"
schemars = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1"
xmltree = "0.8"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_postgres_pool", "diesel_sqlite_pool", "json"]