[package]
name = "reviewer"
version = "0.1.0"
authors = ["keorn <git@i.keorn.org>"]
edition = "2018"
default-run = "main"

[dependencies]
csv = "1.1"
diesel = { version = "1.0", features = ["postgres", "serde_json"] }
diesel-geography = "0.2"
dotenv = "0.9"
isbn = "0.2"
jsonwebtoken = { git = "https://github.com/plantingspace/jsonwebtoken.git" }
once_cell = "1.3"
rand = "0.6"
reqwest = { version = "0.10", features = ["blocking"] }
rocket = { version = "0.4", default-features = false }
rocket_cors = "0.5"
rocket_lamb = "0.6"
rusoto_core = "0.42"
rusoto_credential = "0.42"
rusoto_s3 = "0.42"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1"
xmltree = "0.8"

[dependencies.rocket_contrib]
version = "0.4"
default-features = false
features = ["diesel_postgres_pool", "diesel_sqlite_pool", "json"]